--- a/package.json
+++ b/package.json
@@ -19,13 +19,15 @@
     "@types/react-dom": "^18.3.1",
     "axios": "^1.7.7",
     "busboy": "^1.6.0",
+    "exceljs": "^4.4.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-redux": "^8.1.3",
     "react-scripts": "5.0.1",
     "typescript": "^4.9.5",
     "uuid": "^11.0.3",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "xlsx": "https://cdn.sheetjs.com/xlsx-0.20.3/xlsx-0.20.3.tgz"
   },
   "scripts": {
     "start": "react-scripts start",
