--- a/package.json
+++ b/package.json
@@ -26,8 +26,7 @@
     "react-scripts": "5.0.1",
     "typescript": "^4.9.5",
     "uuid": "^11.0.3",
-    "web-vitals": "^2.1.4",
-    "xlsx": "https://cdn.sheetjs.com/xlsx-0.20.3/xlsx-0.20.3.tgz"
+    "web-vitals": "^2.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
